GNOME Bugzilla – Bug 703997
Couple of obvious fixes for St
Last modified: 2013-07-13 07:31:41 UTC
There is a wrong size comparison as well as the size of paint states not being reset on initialization.
Created attachment 248920 [details] [review] st-theme-node: invalidate cached size when initializing paint state
Created attachment 248921 [details] [review] st-theme-node: fix obvious size comparison error
Review of attachment 248921 [details] [review]: Yup
Review of attachment 248920 [details] [review]: LGTM
Pushed to master.