st-theme-node: fix obvious size comparison error

https://bugzilla.gnome.org/show_bug.cgi?id=703997